--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <label for="description">Description:</label>
         <input type="text" id="description" name="description">
 
-        <input type="submit" value="Add Party">
-      </form>
+        <button type="submit">Add Party</button>
+    </form>
       
-      <ul id="partyList"></ul>
+    <ul id="partyList"></ul>
 </body>
 </html>
